# autor

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  README.md  file_context.json  pyproject.toml  setup.cfg  setup.py
autor/: __init__.py  __main__.py  activity.py
autor/echo/: echo-config.yml  echo_activities.py
autor/flow_configuration/: __init__.py  _configurable.py  activity_block_configuration.py  activity_configuration.py  configurable.py  flow_configuration.py  flow_configuration_factory.py  function_configuration.py
autor/framework/: __init__.py  activity_block.py  activity_block_callback.py  activity_block_rules.py  activity_context.py  activity_data.py  activity_factory.py  activity_registry.py  activity_runner.py  argument_parser.py  autor_framework_activities.py  check.py  (+25 more)
docs/: conf.py  getting_started.md  index.md
examples/: README.md  _old_getting-started-config.yml  example-config.yml  example-config1.yml  file_context.json  getting-started-config.yml  hello-config.yml  pyproject.toml  setup.cfg
examples/activities/: __init__.py  activities1.py  example-config.yml  example_activities.py  extensions.py
examples/example_activities/: __init__.py  activities1.py  activities2.py  hello_world.py
examples/extensions/: __init__.py  context.py  print.py  use_cases.py
examples/getting-started/: file_context.json  pyproject.toml
examples/getting-started/getting_started/: getting-started-config.yml
examples/getting-started/getting_started/activities/: __init__.py  activities1.py
examples/getting-started/getting_started/helpers/: __init__.py
tests/: autor_tester.py  pyproject.toml  setup.cfg  test-config.yml  test_autor.py  test_doc.py  test_manual.py  test_mode_activity_block_rerun.py
tests/data/: ACTIVITY_BLOCK_RERUN___calculateMaxWithNames___third___flow_run_id___SUCCESS.json  ACTIVITY_BLOCK_RERUN___calculateMax___calculateMax-activity1___flow_run_id___SUCCESS.json  ACTIVITY_BLOCK_RERUN___calculateMax___calculateMax-activity2___flow_run_id___SUCCESS.json  ACTIVITY_BLOCK_RERUN___calculateMax___calculateMax-activity4___flow_run_id___SUCCESS.json  ACTIVITY_BLOCK_RERUN___everyOtherActivityRunFails___first___flow_run_id___FAIL.json  ACTIVITY_BLOCK_RERUN___everyOtherActivityRunFails___fourth___flow_run_id___SUCCESS.json  ACTIVITY_BLOCK_RERUN___everyOtherActivityRunFails___second___flow_run_id___FAIL.json  ACTIVITY_BLOCK_RERUN___everyOtherActivityRunFails___third___flow_run_id___FAIL.json  ACTIVITY_BLOCK_RERUN___flexMaxWithInput___throw_ex=False___third___flow_run_id___ERROR.json  ACTIVITY_BLOCK_RERUN_calculateMaxWithExceptionEverySecondRun2_SUCCESS_fourthRun.json  ACTIVITY_BLOCK_RERUN_calculateMaxWithExceptionEverySecondRun2_SUCCESS_thirdRun.json  ACTIVITY_BLOCK_RERUN_calculateMax_SUCCESS_activity1.json  ACTIVITY_BLOCK_RERUN_calculateMax_SUCCESS_activity1_missingContext.json  ACTIVITY_BLOCK_RERUN_calculateMax_SUCCESS_activity1_withContext.json  ACTIVITY_BLOCK_RERUN_calculateMax_SUCCESS_activity2.json  ACTIVITY_BLOCK_RERUN_calculateMax_SUCCESS_activity4.json  ACTIVITY_BLOCK___activityTypeMisspelled___ABORTED.json  ACTIVITY_BLOCK___calculateMaxWithExceptionAllowError___ERROR.json  ACTIVITY_BLOCK___calculateMaxWithException___ERROR.json  ACTIVITY_BLOCK___calculateMaxWithNames___SUCCESS.json  ACTIVITY_BLOCK___calculateMax___flow_run_id___SUCCESS.json  ACTIVITY_BLOCK___calculateMax___flow_run_id___SUCCESS___second_run.json  ACTIVITY_BLOCK___everyOtherActivityRunFails___FAIL.json  ACTIVITY_BLOCK___everyOtherActivityRunFails___FAIL_first_activity.json  ACTIVITY_BLOCK___flexMaxWithException___ERROR.json  ACTIVITY_BLOCK___flexMaxWithInput___throw_ex=False___SUCCESS.json  ACTIVITY_BLOCK___flexMaxWithInput___throw_ex=True___ERROR.json  ACTIVITY_BLOCK___flexMaxWithStatusError___ERROR.json  ACTIVITY_BLOCK___flexMaxWithStatusFail___FAIL.json  ACTIVITY_BLOCK___flexMaxWithStatusSkipped___SUCCESS.json  ACTIVITY_BLOCK___statusFlowAborted___ABORTED.json  ACTIVITY_BLOCK___statusFlowFail___FAIL.json  ACTIVITY_BLOCK___statusFlowSkip___SUCCESS.json  ACTIVITY_BLOCK___statusFlowSuccess___SUCCESS.json  ACTIVITY_BLOCK_calculateMax2_SUCCESS_bootstrapConfigActivityIdProvided.json  ACTIVITY_BLOCK_calculateMax2_SUCCESS_secondAB.json  ACTIVITY_BLOCK_calculateMaxWithExceptionEverySecondRun1_SUCCESS_firstRun.json  ACTIVITY_BLOCK_calculateMaxWithExceptionEverySecondRun2_ERROR_secondRun.json  ACTIVITY_BLOCK_calculateMaxWithExceptionOnSecondRun2_ERROR_secondRun.json  ACTIVITY_BLOCK_calculateMaxWithNames_SUCCESS.json  (+55 more)
tests/test_activities/: activities.py  activities2.py  activity_without_type.py  doc_activities.py
tests/test_extensions/: ConfigBootstrapExtension.py
tests/test_flow_configs/: doc-config.yml  test-config-activity-impl-misses-type.yml  test-config.yml
