[metadata]
name = autor
description = CI/CD-friendly automation framework for developing and running configurable and reusable activities.
long_description = file: README.md
version = attr: autor.__version__
author = doWhile
author_email = code@dowhile.se
keywords = autor, framework
url = todo
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    pyyaml>=6.0.1
    deepdiff>=6.7.1
    pyhumps>=3.8.0

[options.extras_require]
dev =
    black
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
    pytest_mock
    yamllint
    pylint
    coverage
build =
    wheel

[options.packages.find]
include =
    autor.*

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501

[mypy]
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[black]
line-length = 79
target-version = ['py39']