[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Examples of activities, extensions and helpers for getting started with Autor."
authors = ["doWhile <code@dowhile.se>"]
packages = [{include="activities"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
