[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Test cases, test activities and test configurations for testing Autor"
authors = ["doWhile <code@dowhile.se>"]
packages = [{include="test_activities"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
