[metadata]
name = tests
description = Test cases, test activities and test configurations for testing Autor
version = 0.1.0
author = doWhile
author_email = code@dowhile.se
keywords = autor, framework
url = todo
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True

[options.packages.find]
include =
    test_activities.*
    test_extensions.*

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501

[mypy]
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[black]
line-length = 79
target-version = ['py39']